--- a/.github/workflows/PublishMySite.yml
+++ b/.github/workflows/PublishMySite.yml
@@ -1,18 +1,30 @@
-name: publish site
-on: # 在什么时候触发工作流
-  push: # 在从本地main分支被push到GitHub仓库时
+name: pages
+
+on:
+  push:
     branches:
       - main
-  pull_request: # 在main分支合并别人提的pr时
-    branches:
-      - main
-jobs: # 工作流的具体内容
-  deploy:
-    runs-on: ubuntu-latest # 创建一个新的云端虚拟机 使用最新Ubuntu系统
+  pull_request:
+  workflow_dispatch:
+
+jobs:
+  pages:
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2 # 先checkout到main分支
-      - uses: actions/setup-python@v2 # 再安装Python3和相关环境
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: setup
+        run: |
+          cp bin/* /usr/local/bin
+          chmod u+x /usr/local/bin/mdbook*
+
+      - name: build
+        run: mdbook build
+
+      - name: deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          python-version: 3.x
-      - run: pip install mkdocs-material # 使用pip包管理工具安装mkdocs-material
-      - run: mkdocs gh-deploy --force # 使用mkdocs-material部署gh-pages分支
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./book
