--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,6 +23,15 @@ jobs:
       - name: build
         run: mdbook build
 
+      - name: deploy to vercel
+        uses: amondnet/vercel-action@v25
+        with:
+          vercel-args: --prod
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}}
+          working-directory: ./book
+
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
