--- a/book.toml
+++ b/book.toml
@@ -1,9 +1,27 @@
 [book]
 authors = ["ptsfdtz"]
 language = "zh-CN"
-multilingual = true
 src = "src"
 title = "notes"
+theme = "light"
+
+[output.html.print]
+enable = true
+
+[output.html.fold]
+enable = true
+level =2
+
+[output.html.search]
+enable = true
+limit-results = 30
+teaser-word-count = 30
+use-boolean-and = true
+boost-title = 2
+boost-hierarchy = 1
+boost-paragraph = 1
+expand = true
+heading-split-level = 3
 
 [preprocessor.embedify]
-scroll-to-top.enable = false
+scroll-to-top.enable = true
